--- a/simple-chrome-plugin-demo/app/package.json
+++ b/simple-chrome-plugin-demo/app/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "./node_modules/.bin/webpack --config ./build/webpack.base.config.js",
-    "server": "./node_modules/.bin/webpack-dev-server --config ./build/webpack.base.config.js"
+    "server": "./node_modules/.bin/webpack-dev-server --config ./build/webpack.dev.config.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "crypto-browserify": "^3.12.0",
+    "less-loader": "^4.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0"
@@ -23,18 +24,26 @@
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
+    "@types/mini-css-extract-plugin": "^1.4.3",
     "@types/node": "^15.6.2",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
     "babel-loader": "^8.2.2",
+    "chalk": "^4.1.1",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^5.2.6",
     "html-webpack-plugin": "^4.4.1",
+    "less": "^2.7.3",
+    "mini-css-extract-plugin": "^1.6.0",
+    "postcss-loader": "^4.3.0",
     "prettier": "2.3.0",
-    "ts-loader": "^8.0.0",
+    "style-loader": "^2.0.0",
+    "ts-loader": "^7.0.0",
     "typescript": "^4.3.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^5.7.3",
     "webpack-node-externals": "^3.0.0"
   }
 }
