--- a/simple-chrome-plugin-demo/app/package.json
+++ b/simple-chrome-plugin-demo/app/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/.bin/webpack --config ./build/webpack.base.config.js",
+    "build": "./node_modules/.bin/webpack --config ./build/webpack.pro.config.js",
     "server": "./node_modules/.bin/webpack-dev-server --config ./build/webpack.dev.config.js"
   },
   "keywords": [],
@@ -28,6 +28,7 @@
     "@types/node": "^15.6.2",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
+    "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
     "chalk": "^4.1.1",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
@@ -35,11 +36,13 @@
     "html-webpack-plugin": "^4.4.1",
     "less": "^2.7.3",
     "mini-css-extract-plugin": "^1.6.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.0",
     "postcss-loader": "^4.3.0",
     "prettier": "2.3.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^7.0.0",
     "typescript": "^4.3.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.1.4",
