--- a/simple-chrome-plugin-demo/app/tsconfig.json
+++ b/simple-chrome-plugin-demo/app/tsconfig.json
@@ -71,5 +71,5 @@
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
-  "exclude": ["dist", "build", "server"]
+  "exclude": ["dist", "build", "server", "postcss.config.js"]
 }
