--- a/simple-chrome-plugin-demo/app/package.json
+++ b/simple-chrome-plugin-demo/app/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node server/server.js",
     "build": "./node_modules/.bin/webpack --config ./build/webpack.pro.config.js",
     "server": "./node_modules/.bin/webpack-dev-server --config ./build/webpack.dev.config.js"
   },
@@ -15,7 +16,6 @@
     "crypto": false
   },
   "dependencies": {
-    "crypto-browserify": "^3.12.0",
     "less-loader": "^4.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
