--- a/simple-chrome-plugin-demo/manifest.json
+++ b/simple-chrome-plugin-demo/manifest.json
@@ -1,28 +1,23 @@
 {
-	"manifest_version": 2,
-	"name": "Chrome插件demo",
-	"version": "1.0",
-	"description": "最简单的Chrome插件demo，需要快速做一个简单的插件时可以基于这个仓库开发",
-	"author": "sxei",
-	"icons":
-	{
-		"48": "icon.png",
-		"128": "icon.png"
-	},
-	"browser_action": 
-	{
-		"default_icon": "icon.png",
-		"default_popup": "popup.html"
-	},
-	"content_scripts": 
-	[
-		{
-			"matches": ["https://www.baidu.com/*"],
-			"js": ["content-script.js"]
-		}
-	],
-	"web_accessible_resources": 
-	[
-		"inject.js"
-	]
+  "manifest_version": 2,
+  "name": "react+Chrome插件",
+  "version": "1.0",
+  "description": "最简单的react+Chrome插件demo，需要快速做一个简单的插件时可以基于这个仓库开发",
+  "author": "lhf",
+  "icons": {
+    "48": "icon.png",
+    "128": "icon.png",
+    "256": "icon.png"
+  },
+  "browser_action": {
+    "default_icon": "icon.png",
+    "default_popup": "app/dist/index.html"
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://www.baidu.com/*"],
+      "js": ["content-script.js"]
+    }
+  ],
+  "web_accessible_resources": ["inject.js"]
 }
