--- a/simple-chrome-plugin-demo/app/package.json
+++ b/simple-chrome-plugin-demo/app/package.json
@@ -19,6 +19,7 @@
     "less-loader": "^4.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^4.2.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
@@ -28,6 +29,8 @@
     "@types/node": "^15.6.2",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
+    "@types/react-router": "^4.1.15",
+    "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
     "chalk": "^4.1.1",
