--- a/simple-chrome-plugin-demo/manifest.json
+++ b/simple-chrome-plugin-demo/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0",
   "description": "最简单的react+Chrome插件demo，需要快速做一个简单的插件时可以基于这个仓库开发",
   "author": "lhf",
-  "permissions": ["cookies", "http://*/*", "https://*/*", "<all_urls>"],
+  "permissions": ["cookies", "http://*/*", "https://*/*", "<all_urls>", "tabs"],
   "icons": {
     "48": "icon.png",
     "128": "icon.png",
