--- a/simple-chrome-plugin-demo/manifest.json
+++ b/simple-chrome-plugin-demo/manifest.json
@@ -1,16 +1,17 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "react+Chrome插件",
   "version": "1.0",
   "description": "最简单的react+Chrome插件demo，需要快速做一个简单的插件时可以基于这个仓库开发",
   "author": "lhf",
   "permissions": ["cookies", "http://*/*", "https://*/*", "<all_urls>", "tabs"],
+  "host_permissions": ["*://*/*"],
   "icons": {
     "48": "icon.png",
     "128": "icon.png",
     "256": "icon.png"
   },
-  "browser_action": {
+  "action": {
     "default_icon": "icon.png",
     "default_popup": "app/dist/index.html"
   },
@@ -19,6 +20,5 @@
       "matches": ["https://www.baidu.com/*"],
       "js": ["content-script.js"]
     }
-  ],
-  "web_accessible_resources": ["inject.js"]
+  ]
 }
