--- a/simple-chrome-plugin-demo/app/package.json
+++ b/simple-chrome-plugin-demo/app/package.json
@@ -17,6 +17,8 @@
     "crypto": false
   },
   "dependencies": {
+    "antd": "^4.16.3",
+    "antd~v4.6.2": "npm:antd@^4.16.3",
     "less-loader": "^4.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -43,6 +45,7 @@
     "optimize-css-assets-webpack-plugin": "^6.0.0",
     "postcss-loader": "^4.3.0",
     "prettier": "2.3.0",
+    "raw-loader": "^4.0.2",
     "style-loader": "^2.0.0",
     "ts-loader": "^7.0.0",
     "typescript": "^4.3.2",
