--- a/simple-chrome-plugin-demo/app/package.json
+++ b/simple-chrome-plugin-demo/app/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "^17.0.6",
     "@types/react-router": "^4.1.15",
     "@types/react-router-dom": "^5.1.7",
+    "@types/chrome": "^0.0.145",
     "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
     "chalk": "^4.1.1",
